emboss (6.4.0-1) UNRELEASED; urgency=low

  [ Charles Plessy ]
  * New upstream release.
  * Removed calls to dh_makeshlibs in debian/rules (closes: #595613).
  * Build on libpng-dev instead of libpng12-dev (closes: #662313).

  [ Andreas Tille ]
  * debian/upstream: separate reference section
  * debian/rules: Make sure every binary package has a changelog file

 -- Charles Plessy <plessy@debian.org>  Wed, 20 Jul 2011 13:22:15 +0900

emboss (6.3.1-6) unstable; urgency=low

  * All EMBOSS libraries are to be considered private. The libajax* and
    libnucleus* are merged in the emboss-lib package, which is moved
    from the ‘libs’ to the ‘science’ section. Closes: #595613.
  * Added a Lintian override for the convenience copy of the PCRE
    library (debian/emboss-lib.lintian-overrides).
  * Build-depend on libhpdf-dev for PDF support, removed erroneous build
    dependance on libpcre3-dev (debian/control).
  * Added dependance on emboss to jemboss (debian/control).

 -- Charles Plessy <plessy@debian.org>  Thu, 16 Sep 2010 21:06:14 +0900

emboss (6.3.1-5) unstable; urgency=low

  * New upstream patch, version 1-4.
  * Restore original config.* files in the clean target if the unpacked
    source package is a git repository (debian/rules).

 -- Charles Plessy <plessy@debian.org>  Thu, 12 Aug 2010 08:00:58 +0900

emboss (6.3.1-4) unstable; urgency=low

  * New upstream patch, version 1-2.
  * Unset LS_COLORS in debian/rules (see #592089).

 -- Charles Plessy <plessy@debian.org>  Sat, 07 Aug 2010 23:03:10 +0900

emboss (6.3.1-3) unstable; urgency=low

  * Use default Java instead of OpenJDK (debian/control, debian/rules,
    closes: #590553, thanks to Petr Salinger).
  * Incremented Standards-Version in debian/control to reflect conformance
    with Debian Policy 3.9.1 (no changes needed).

 -- Charles Plessy <plessy@debian.org>  Wed, 28 Jul 2010 23:42:31 +0900

emboss (6.3.1-2) unstable; urgency=low

  * First upstream patch for version 6.3.1 (debian/series,